--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 # If your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would
 # contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
 baseURL: "https://adityatelange.github.io/hugo-PaperMod/"
-title: PaperMod
+title: Anonymous Bear
 copyright: "© [PaperMod Contributors](https://github.com/adityatelange/hugo-PaperMod/graphs/contributors)"
-paginate: 5
+pagerSize: 5
 theme: [hugo-PaperMod]
 
 enableInlineShortcodes: true
@@ -35,72 +35,72 @@ languages:
         - name: Search
           url: search/
           weight: 10
-        - name: Tags
-          url: tags/
-          weight: 10
-        - name: WiKi
-          url: https://github.com/adityatelange/hugo-PaperMod/wiki/
+        # - name: Tags
+        #   url: tags/
+        #   weight: 10
+        # - name: WiKi
+        #   url: https://github.com/adityatelange/hugo-PaperMod/wiki/
 
-  fr:
-    languageName: ":fr:"
-    weight: 2
-    title: PaperModL2
-    taxonomies:
-      category: FRcategories
-      tag: FRtags
-      series: FRseries
-    menu:
-      main:
-        - name: Archive
-          url: archives/
-          weight: 5
-        - name: FRTags
-          url: frtags
-          weight: 10
-        - name: FRCategories
-          url: frcategories
-          weight: 10
-        - name: FRSeries
-          url: frseries
-          weight: 10
-        - name: NullLink
-          url: "#"
+  # fr:
+  #   languageName: ":fr:"
+  #   weight: 2
+  #   title: Anonymous Bear
+  #   taxonomies:
+  #     category: FRcategories
+  #     tag: FRtags
+  #     series: FRseries
+  #   menu:
+  #     main:
+  #       - name: Archive
+  #         url: archives/
+  #         weight: 5
+  #       - name: FRTags
+  #         url: frtags
+  #         weight: 10
+  #       - name: FRCategories
+  #         url: frcategories
+  #         weight: 10
+  #       - name: FRSeries
+  #         url: frseries
+  #         weight: 10
+  #       - name: NullLink
+  #         url: "#"
 
-    # custom params for each language should be under [langcode].parms - hugo v0.120.0
-    params:
-      languageAltTitle: French
-      profileMode:
-        enabled: true
-        title: PaperMod
-        imageUrl: "https://raw.githubusercontent.com/googlefonts/noto-emoji/master/svg/emoji_u1f9d1_1f3fb_200d_1f4bb.svg"
-        imageTitle: ProfileMode image
-        # imageWidth: 120
-        # imageHeight: 120
-        subtitle: "☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive"
-        buttons:
-          - name: Blog
-            url: posts
-          - name: Profile Mode
-            url: https://github.com/adityatelange/hugo-PaperMod/wiki/Features#profile-mode
+  #   # custom params for each language should be under [langcode].parms - hugo v0.120.0
+  #   params:
+  #     languageAltTitle: French
+  #     profileMode:
+  #       enabled: true
+  #       title: PaperMod
+  #       url: assets/images/kakashi.jpg
+  #       imageTitle: ProfileMode image
+  #       # imageWidth: 120
+  #       # imageHeight: 120
+  #       subtitle: "☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive"
+  #       buttons:
+  #         - name: Blog
+  #           url: posts
+  #         - name: Profile Mode
+  #           url: https://github.com/adityatelange/hugo-PaperMod/wiki/Features#profile-mode
 
-  fa:
-    languagedirection: rtl
-    weight: 3
-    title: PaperMod RTL
-    taxonomies:
-      category: FAcategories
-      tag: FAtags
-      series: FAseries
-    menu:
-      main:
-        - name: FATags
-          url: fatags
-          weight: 10
-    # custom params for each language should be under [langcode].parms - hugo v0.120.0
-    params:
-      homeInfoParams:
-        Title: "Hi there \U0001F44B"
-        Content: Welcome to RTL layout
+  # fa:
+  #   languagedirection: rtl
+  #   weight: 3
+  #   title: PaperMod RTL
+  #   taxonomies:
+  #     category: FAcategories
+  #     tag: FAtags
+  #     series: FAseries
+  #   menu:
+  #     main:
+  #       - name: FATags
+  #         url: fatags
+  #         weight: 10
+  #   # custom params for each language should be under [langcode].parms - hugo v0.120.0
+  #   params:
+  #     homeInfoParams:
+  #       Title: "Hi there \U0001F44B"
+  #       Content: Welcome to RTL layout
 
 outputs:
   home:
@@ -113,7 +113,7 @@ params:
   description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
   author: Theme PaperMod
   # author: ["Me", "You"] # multiple authors
-
+  social: true
   defaultTheme: auto
   # disableThemeToggle: true
   ShowShareButtons: true
@@ -144,29 +144,28 @@ params:
         url: tags
 
   homeInfoParams:
-    Title: "PaperMod's Demo"
+    Title: "Bear Territory"
     Content: >
-      👋 Welcome to demo page of Hugo's theme PaperMod!
+      👋 Hi, this is Anonymous Bear. Welcome to my blog!
 
-      - **PaperMod**  is designed to be clean and simple but fast and responsive theme with useful feature-set that enhances UX.
+      - I like to crack things. Here, I share my latest work, insights, tutorials on vulnerability discovery, and my followup on latest advanced exploitation techniques.
 
-      - Feel free to show your support by giving us a star 🌟 on GitHub and sharing with your friends and social media .
+      - Go Bears!
 
-      - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper/tree/4330c8b12aa48bfdecbcad6ad66145f679a430b3).
 
   socialIcons:
     - name: github
       title: View Source on Github
-      url: "https://github.com/adityatelange/hugo-PaperMod"
-    - name: Discord
-      title: Join discord community
-      url: "https://discord.gg/ahpmTvhVmp"
+      url: "https://github.com/ZhengShenghan"
+    # - name: Discord
+    #   title: Join discord community
+    #   url: "https://discord.gg/ahpmTvhVmp"
     - name: X
-      title: Share PaperMod on X/Twitter
-      url: "https://x.com/intent/tweet/?text=Checkout%20Hugo%20PaperMod%20%E2%9C%A8%0AA%20fast,%20clean,%20responsive%20Hugo%20theme.&url=https://github.com/adityatelange/hugo-PaperMod&hashtags=Hugo,PaperMod"
+      title: X
+      url: "https://x.com/shenghan_zheng"
     - name: KoFi
       title: Buy me a Ko-Fi :)
-      url: "https://ko-fi.com/adityatelange"
+      url: "https://ko-fi.com/anonymousbear3305"
 
   editPost:
     URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
